Web Inspector: Network Tab: shift key should highlight initiator/initiated resources https://bugs.webkit.org/show_bug.cgi?id=242714
Reviewed by Patrick Angle.

* Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.js:
(WI.NetworkTableContentView):
(WI.NetworkTableContentView.prototype.attached): Added.
(WI.NetworkTableContentView.prototype.detached):
(WI.NetworkTableContentView.prototype.tableRowHovered): Added.
(WI.NetworkTableContentView.prototype.tableRowClassNames): Added.
(WI.NetworkTableContentView.prototype._highlightRelatedResourcesForHoveredResource): Added.
(WI.NetworkTableContentView.prototype._entryForResource):
(WI.NetworkTableContentView.prototype._entryForDOMNode):
(WI.NetworkTableContentView.prototype._handleGlobalModifierKeysDidChange): Added.
Save `rowClassNames` for each entry in the table, adding items based on if the shift key is pressed
and if the entry was loaded (i.e. initiated) by the hovered entry.

* Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.css:
(body.shift-key-pressed .network-table > .table:hover li:not(:hover, .selected, .initiated) .cell):
(body.shift-key-pressed .network-table > .table:hover li:not(:hover, .selected, .initiated) .cell > *):
(body.shift-key-pressed .network-table > .table:hover li.initiated .cell.name::after):
Indiciated initiated resources by drawing a small blue (or whatever the system accent color is) dot.

* Source/WebInspectorUI/UserInterface/Views/Table.js:
(WI.Table.prototype.restyleRow): Added.
(WI.Table.prototype._getOrCreateRow):
(WI.Table.prototype._styleRow):
(WI.Table.prototype._handleRowMouseEnter): Added.
(WI.Table.prototype._handleRowMouseLeave): Added.
Add delegate methods for `tableRowHovered` and `tableRowClassNames` to allow clients to further
customize the appearance of rows in a `WI.Table` whenever needed.
Also add a way to force calling these new delegate methods for a given row (index).

* Source/WebInspectorUI/UserInterface/Views/Variables.css:
(:root):
(b

--- a/Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.css
@@ -87,6 +87,26 @@
     cursor: pointer;
 }
 
+body.shift-key-pressed .network-table > .table:hover li:not(:hover, .selected, .initiated) .cell {
+    color: var(--text-color-transparent);
+}
+
+body.shift-key-pressed .network-table > .table:hover li:not(:hover, .selected, .initiated) .cell > * {
+    color: var(--text-color);
+    opacity: 0.4;
+}
+
+body.shift-key-pressed .network-table > .table:hover li.initiated .cell.name::after {
+    display: inline-block;
+    float: right;
+    width: 4px;
+    height: 4px;
+    margin-top: 8px;
+    content: "";
+    background-color: var(--glyph-color-active);
+    border-radius: 50%;
+}
+
 .network-table > .table .cell.dom-node.name .icon {
     content: url(../Images/TypeIcons.svg#DOMElement-light);
 }
